find_package(Python 3 COMPONENTS Interpreter REQUIRED)
set(PRECISIONGENERATOR_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}")
set(PRECISIONGENERATOR_LOCATION "${PRECISIONGENERATOR_LOCATION}" CACHE INTERNAL
  "Location of the PrecisionGenerator python tool to be created (should not be changed by users)")

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)

install(FILES
        ${PRECISIONGENERATOR_LOCATION}/PrecisionDeps.py
        ${PRECISIONGENERATOR_LOCATION}/PrecisionGenerator.py
        ${PRECISIONGENERATOR_LOCATION}/subs.py
        ${PRECISIONGENERATOR_LOCATION}/Conversion.py
        DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/dplasma/PrecisionGenerator)
